--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -1,31 +1,46 @@
-.todo-label {
-  display: flex;
+body {
+  background: rgb(57, 52, 52);
   flex-direction: column;
-  margin: 0px 400px;
-  margin-top: 10rem;
+  justify-content: center;
 }
 
 .header {
-  margin: 0.5rem;
-  padding: 0.5rem;
+  position: relative;
+  left: 22rem;
+  top: 9rem;
+  color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-transform: uppercase;
   letter-spacing: 4px;
+}
+
+.input-box {
+  position: relative;
+  background-color: rgb(71, 70, 70);
+  color: white;
+  margin: 20rem;
+  padding: 1rem 1.5rem;
+  height: 2rem;
+  box-sizing: border-box;
+  border: none;
+  font-size: 1rem;
+  width: 48%;
+}
+
+.todo-label {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  margin: 12rem 22rem;
+  padding: 1.5rem;
+  background: rgb(213, 93, 239);
+  border-radius: 0.5rem;
 }
 
 .label {
   display: block;
   font-size: large;
   font-weight: bold;
-}
-
-.input-box {
-  margin: 1rem;
-  padding: 1rem 1.5rem;
-  height: 2rem;
-  box-sizing: border-box;
-  font-size: 1rem;
-  width: 100%;
 }
 
 .button-add {
@@ -39,9 +54,15 @@
   text-align: center;
 }
 
-.due-date,
 .due-date-box {
+  background-color: rgb(71, 70, 70);
+  color: white;
   margin: 1rem;
   height: 2rem;
   font-size: 1rem;
+}
+
+.due-date {
+  color: white;
+  font-weight: bold;
 }
