--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -1,20 +1,31 @@
-@media screen and (min-width: 1155px) {
-  ul {
-    list-style-type: circle;
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-    margin: 20px;
-    padding: 0.25rem 2rem;
-    border: 1px solid;
-  }
-
-  .button-delete {
-    margin: 5px 0;
-    padding: 5px;
-    background-color: red;
-    color: white;
-    font-weight: bold;
-    border: none;
-  }
+/* @media screen and (min-width: 1155px) { */
+ul {
+  list-style-type: circle;
+  font-size: 1.15rem;
+  color: white;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid;
 }
+
+/* .todo:last-child {
+  margin-top: 0;
+  border-top: 0;
+  border-bottom: transparent;
+  background-color: red;
+} */
+
+.todo-date {
+  font-size: 0.75rem;
+  color: rgb(190, 139, 241);
+}
+
+.button-delete {
+  margin: 5px 0;
+  padding: 5px;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  border: none;
+}
+/* } */
