--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -1,80 +1,31 @@
-body {
-  background: rgb(29, 1, 52);
-  background-image: linear-gradient(
-    to right,
-    rgb(71, 3, 159),
-    rgb(65, 9, 111),
-    rgb(75, 13, 132),
-    rgb(102, 5, 193)
-  );
-  background-repeat: no-repeat;
-  background-size: 100% 60%;
-  background-attachment: fixed;
-}
-
-.page {
+.homepage {
+  margin-top: 5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: left;
-  margin: 5rem 20rem;
-  padding: 2rem;
+  align-items: center;
 }
-
-.header,
-.input-box,
-.todo-label,
-.due-date,
-.due-date-box {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+h2 {
   color: white;
-}
-
-.header {
-  font-size: 2.75rem;
+  font-size: 2rem;
   text-transform: uppercase;
-  letter-spacing: 0.5rem;
+  font-family: Verdana, Tahoma, sans-serif;
+  letter-spacing: 0.75rem;
+}
+h2 b {
+  color: white;
+  font-size: 3rem;
+  text-transform: lowercase;
+  font-family: "Snell Roundhand";
+  letter-spacing: 0.75rem;
 }
 
 .input-box {
-  background-color: rgb(71, 65, 90);
-
+  width: 100%;
   font-size: 1rem;
-  margin: 1rem 0;
-  padding: 1rem 1.5rem;
-  height: 3.5rem;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 0.5rem;
-  width: 75%;
-}
-
-.todo-label {
-  margin: 1rem 0;
-  background: rgb(71, 65, 90);
-  border-radius: 0.5rem;
-  width: 75%;
-}
-
-.button-add {
-  color: white;
-  background: rgb(71, 65, 90);
-  font-size: 1rem;
-  font-weight: bold;
+  color: grey;
+  padding: 0.5rem;
+  margin: 0.5rem;
   border: none;
   border-radius: 0.25rem;
-  padding: 9px 13px;
-  text-decoration: none;
-  text-align: center;
-}
-
-.due-date-box {
-  background-color: rgb(71, 65, 90);
-  font-size: 1rem;
-  margin: 1rem;
-  height: 2rem;
-}
-
-.due-date {
-  font-weight: bold;
 }
