--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background: rgb(164, 133, 244);
+  background: linear-gradient(
+    90deg,
+    rgba(164, 133, 244, 1) 31%,
+    rgba(186, 143, 233, 1) 58%,
+    rgba(228, 177, 242, 1) 100%
+  );
 }
