--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -1,31 +1,8 @@
 /* @media screen and (min-width: 1155px) { */
-ul {
-  list-style-type: circle;
-  font-size: 1.15rem;
-  color: white;
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid;
-}
-
-/* .todo:last-child {
-  margin-top: 0;
-  border-top: 0;
-  border-bottom: transparent;
-  background-color: red;
-} */
-
-.todo-date {
-  font-size: 0.75rem;
-  color: rgb(190, 139, 241);
-}
-
-.button-delete {
-  margin: 5px 0;
-  padding: 5px;
-  background-color: red;
-  color: white;
-  font-weight: bold;
+.list {
+  width: 50%;
+  padding: 0.5rem;
+  margin: 0.5rem;
   border: none;
+  border-radius: 0.25rem;
 }
-/* } */
