--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -1,10 +1,8 @@
 .homepage {
-  margin-top: 5rem;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  align-items: center;
+  margin-top: 10rem;
+  margin-bottom: 5rem;
 }
+
 h1 {
   color: white;
   font-size: 2rem;
@@ -28,7 +26,7 @@ h4 {
 }
 
 .input-box {
-  width: 100%;
+  width: 92%;
   font-size: 1rem;
   color: grey;
   padding: 0.5rem;
@@ -48,7 +46,7 @@ button {
 }
 
 .datepicker {
-  width: 80%;
+  width: 92%;
   font-size: 1rem;
   margin: 0.5rem;
   padding: 0.5rem;
